--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,12 @@
 spring.batch.job.enabled=false
+
 spring.main.allow-bean-definition-overriding=true
+
+logging.level.org.=INFO
+logging.level.jessezhang.Application=WARN
+logging.level.com.zaxxer.hikari.=WARN
+logging.level.org.springframework.batch.core.job=WARN
+logging.level.org.springframework.batch.core.launch=WARN
+logging.level.dPriceBatchScheduler$CustomTaskScheduler=WARN
+logging.level.org.springframework.batch.core.repository.support.JobRepositoryFactoryBean=WARN
+logging.level.org.springframework.beans.factory.support.DisposableBeanAdapter=WARN
