--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ logging.level.org.springframework.batch.core.launch=WARN
 logging.level.dPriceBatchScheduler$CustomTaskScheduler=WARN
 logging.level.org.springframework.batch.core.repository.support.JobRepositoryFactoryBean=WARN
 logging.level.org.springframework.beans.factory.support.DisposableBeanAdapter=WARN
+
+spring.main.banner-mode=off
