--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+# Configuration
+
 spring.batch.job.enabled=false
 
 spring.main.allow-bean-definition-overriding=true
@@ -11,3 +13,10 @@ logging.level.org.springframework.batch.core.repository.support.JobRepositoryFac
 logging.level.org.springframework.beans.factory.support.DisposableBeanAdapter=WARN
 
 spring.main.banner-mode=off
+
+
+# Values
+
+number.of.instruments=4
+number.of.high.update.frequency.instruments=2
+number.of.low.update.frequency.instruments=2
